--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>Google Clone</title>
     
 </head>
@@ -17,18 +19,22 @@
             <div class="nav-right">
                     <a href="#">Gmail</a>
                     <a href="#">Images</a>
-                    <a href="#">Apps</a>
-                    <a href="#">Login</a>
+                    <a href="#"><span onclick="myMenu()" id="menu" class="material-icons">apps</span></a>
+                    <a href="#" class="sign-in">Sign In</a>
 
             </div>
         </nav>
     <div class="search-form">
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
+        
         <form>
-            <input type="text" name="search" id="search">
-            <div class="btn" id="btn">
-                <button>Google Search</button>
-                <button>I'm Feeling Lucky</button>
+            <div id="search">
+            <div class="material-icons md-dark" id="search-icon">search</div>
+            <input type="text" name="search" >
+            </div>
+            <div class="search-btn" id="search-btn">
+                <a><div id="gsearch">Google Search</div></a>
+                <a><div id="lucky">I'm Feeling Lucky</div></a>
             </div>
 
         </form>
